<resources>
    <string name="app_name">FuelMemo</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_add_vehicle">Add Vehicle</string>
    <string name="menu_item_delete_vehicle">Delete Vehicle</string>
    <string name="menu_item_all_records">View all records</string>
    <string name="menu_item_delete_records">Delete Records</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_sign_out">Sign Out</string>

    <string name="default_plate">Vehicle Plate</string>
    <string name="default_name">Vehicle Name</string>

    <string name="vehicles_title">Your Vehicles</string>
    <string name="add_vehicle_title">Add Vehicle</string>
    <string name="overview_title">Overview</string>
    <string name="all_records_title">All Records</string>
    <string name="no_connection_title">No Connection</string>
    <string name="title_activity_all_records">AllRecordsActivity</string>
    <string name="title_activity_add_vehicle">AddVehicleActivity</string>
    <string name="del_rec_title">Which records to delete?</string>
    <string name="del_veh_title">Which vehicles to delete?</string>
    <string name="del_conf_title">Are you sure?</string>
    <string name="settings_n_records_dialog_title">Number of records</string>
    <string name="settings_title">Settings</string>
    <string name="login_title">Login</string>
    <string name="sign_up_title">Sign Up</string>

    <string name="overview_heading_default">Previous records</string>
    <string name="all_records_heading_default">All records</string>
    <string name="settings_vehicle_heading">Vehicles Page</string>
    <string name="settings_tile_heading">Tile Colour - This is the background colour of vehicle tiles</string>
    <string name="settings_overview_heading">Overview Page</string>
    <string name="settings_n_records_heading">Number of previous records - This is the number of previous records on the overview page</string>

    <string name="net_retry_prompt">No network connection found. Please check that your device\'s Data or Wi-Fi is on and click connect</string>
    <string name="net_con_btn_text">Connect</string>
    <string name="net_retry_fail">No network connection found</string>
    <string name="default_error">Oops, Something went wrong, please try again</string>
    <string name="server_error">Oops, Something went wrong, we are looking into it</string>
    <string name="no_vehicles">You don\'t have any vehicles. Click the menu to add a vehicle</string>
    <string name="no_records">There are no records found for the plate</string>
    <string name="date_input_error">Please select a valid date</string>
    <string name="miles_input_error">Please enter a valid miles value</string>
    <string name="cost_input_error">Please enter a valid cost value</string>
    <string name="max_records_reached_message">
        You have reached the maximum of 50 submissions for a single vehicle. Would you like to remove the oldest record?
        Answering no will cancel this submission. You can manually remove submissions on the \'View all submissions\' page
    </string>
    <string name="max_vehicles_reached_message">
        You have reached the maximum of 10 vehicles.
        Please remove a vehicle before adding another
    </string>
    <string name="login_error">We could not find that username and password combination in our database</string>
    <string name="login_empty_user">Please enter a username</string>
    <string name="login_empty_pass">Please enter a password</string>
    <string name="login_min_user">Username must be 5 \- 20 characters</string>
    <string name="login_min_pass">Password must be 5 \- 20 characters</string>
    <string name="sign_up_empty_user">Please enter a username</string>
    <string name="sign_up_empty_pass">Please enter a password</string>
    <string name="sign_up_min_user">Username must be 5 \- 20 characters</string>
    <string name="sign_up_min_pass">Password must be 5 \- 20 characters</string>
    <string name="sign_up_password_mismatch">Passwords did not match, try again</string>
    <string name="sign_up_user_exists">Username already exists</string>

    <string name="login_btn">Login</string>
    <string name="login_username_heading">Username</string>
    <string name="login_password_heading">Password</string>
    <string name="login_username_hint">Enter Username</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_sign_up_link">Sign Up \-></string>
    <string name="login_pass_reset_text">Forgotten your password? Email us at support@cfbrownweb.com</string>

    <string name="sign_up_username_heading">Username</string>
    <string name="sign_up_username_criteria">Username must consist of only letters and numbers</string>
    <string name="sign_up_password_heading">Password</string>
    <string name="sign_up_password_criteria">Username must not contain spaces</string>
    <string name="sign_up_password_repeat_heading">Repeat Password</string>
    <string name="sign_up_username_hint">Enter Username</string>
    <string name="sign_up_password_hint">Enter Password</string>
    <string name="sign_up_password_repeat_hint">Enter Password again</string>
    <string name="sign_up_btn">Sign Up</string>

    <string name="submit_btn_text">Submit</string>
    <string name="add_vehicle_btn">Submit</string>
    <string name="plate_input_hint">Enter vehicle plate</string>
    <string name="name_input_hint">Enter vehicle name</string>
    <string name="submit_cancel">Cancelled</string>
    <string name="del_rec_conf_message">Are you sure you want to delete the following records:</string>
    <string name="del_veh_conf_message">Are you sure you want to delete the following vehicles:</string>
    <string name="settings_n_records_cancel">Cancel</string>
    <string name="settings_n_records_set">Set</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

</resources>
