<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cfbrownweb.fuelmemo.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up_user_exists"
        android:textColor="@color/red"
        android:id="@+id/sign_up_user_exists"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_username_heading"
        android:id="@+id/sign_up_username_heading"
        android:layout_below="@id/sign_up_user_exists"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_username_criteria"
        android:layout_below="@id/sign_up_username_heading"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up_username_criteria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_username_input"
        android:hint="@string/sign_up_username_hint"
        android:layout_below="@id/sign_up_username_criteria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up_password_mismatch"
        android:textColor="@color/red"
        android:id="@+id/sign_up_password_mismatch"
        android:layout_below="@id/sign_up_username_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_password_heading"
        android:id="@+id/sign_up_password_heading"
        android:layout_below="@id/sign_up_password_mismatch"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_password_criteria"
        android:layout_below="@id/sign_up_password_heading"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up_password_criteria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/sign_up_password_input"
        android:hint="@string/sign_up_password_hint"
        android:layout_below="@id/sign_up_password_criteria"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sign_up_password_repeat_heading"
        android:id="@+id/sign_up_password_repeat_heading"
        android:layout_below="@id/sign_up_password_input"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/sign_up_password_repeat_input"
        android:hint="@string/sign_up_password_repeat_hint"
        android:layout_below="@id/sign_up_password_repeat_heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_btn"
        android:id="@+id/sign_up_btn"
        android:layout_below="@+id/sign_up_password_repeat_input"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="signUpAttempt"/>

</RelativeLayout>
