<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cfbrownweb.fuelmemo.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_scroll"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_vehicle_heading"
            android:id="@+id/settings_vehicles_heading"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settings_tile_heading"
            android:id="@+id/settings_tile_heading"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/settings_vehicles_heading"/>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colour_setting_scroll"
            android:layout_below="@id/settings_tile_heading"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/settings_colour_btn_grey"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/round_grey"
                    android:onClick="selectColour"/>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/settings_colour_btn_blue"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/round_blue"
                    android:onClick="selectColour"/>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/settings_colour_btn_green"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/round_green"
                    android:onClick="selectColour"/>

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/settings_colour_btn_red"
                    style="?android:attr/buttonBarButtonStyle"
                    android:background="@drawable/round_red"
                    android:onClick="selectColour"/>
            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_overview_heading"
            android:id="@+id/settings_overview_heading"
            android:layout_below="@id/colour_setting_scroll"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settings_n_records_heading"
            android:id="@+id/settings_n_records_heading"
            android:layout_marginTop="10dp"
            android:layout_below="@id/settings_overview_heading"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_n_records_heading"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:text="Default"
                android:id="@+id/settings_n_records_value"
                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_n_records_btn"
                android:text="Change"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:onClick="showNumberPicker"/>
        </LinearLayout>


    </RelativeLayout>

</ScrollView>
